fix footer alignment

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -13,7 +13,7 @@
   padding: 0;
 }
 
-.footer_logo {
+.footer__logo {
   width: 116px;
   height: 21px;
 }
@@ -30,7 +30,7 @@
   justify-content: space-between;
 }
 
-.footer_list {
+.footer__list {
   padding: 0;
   margin: 0;
   list-style-type: none;
@@ -46,6 +46,7 @@
   margin: 0;
   display: flex;
   gap: 10px;
+  margin-bottom: 16px;
 }
 
 .footer__social-icon {
